--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
     sdk: flutter
   flutter_screenutil: ^5.9.1
   get: ^4.6.6
+  google_fonts: ^6.2.1
   rive: ^0.13.5
 
 dev_dependencies:
